src/test/ui/consts/const-extern-fn/const-extern-fn-call-extern-fn.stderr
error[E0015]: calls in constant functions are limited to constant functions, tuple structs and tuple variants
  --> $DIR/const-extern-fn-call-extern-fn.rs:9:9
   |
LL |         regular_in_block();
   |         ^^^^^^^^^^^^^^^^^^

error[E0015]: calls in constant functions are limited to constant functions, tuple structs and tuple variants
  --> $DIR/const-extern-fn-call-extern-fn.rs:18:9
   |
LL |         regular();
   |         ^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0015`.
